src/Services/adminServices/SharedServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lov-service
  labels:
    name: lov-service
